--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cycler==0.11.0
 dash==2.3.1
 dash-bootstrap-components==1.1.0
 dash-core-components==2.0.0
+dash-daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Fiona==1.8.21
